--- a/app/src/main/res/layout/article_row.xml
+++ b/app/src/main/res/layout/article_row.xml
@@ -2,11 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
-        android:id="@+id/title_row"
+        android:id="@+id/hTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="30sp"
+        android:textColor ="@color/black"/>
+
+    <TextView
+        android:id="@+id/hDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp" />
 </LinearLayout>
